// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UpdateSpellPage /> should match the snapshot 1`] = `
<Page
  breadcrumbs={
    Array [
      Object {
        "label": "Home",
        "url": "/",
      },
      Object {
        "label": "Spells",
        "url": "/spells",
      },
      Object {
        "active": true,
        "label": "Loading...",
      },
    ]
  }
  className="page-spells"
  layout={null}
  subtitle="5e Campaign Companion"
  title="Parchment"
>
  <p>
    Loading spell from the server...
  </p>
</Page>
`;

exports[`<UpdateSpellPage /> when the request status is SUCCESS should match the snapshot 1`] = `
<Page
  breadcrumbs={
    Array [
      Object {
        "label": "Home",
        "url": "/",
      },
      Object {
        "label": "Spells",
        "url": "/spells",
      },
      Object {
        "label": "Thunderclap",
        "url": "/spells/e17bca01-24d3-48d3-a308-099dd6dca373",
      },
      Object {
        "active": true,
        "label": "Update",
      },
    ]
  }
  className="page-spells"
  layout={null}
  subtitle="5e Campaign Companion"
  title="Parchment"
>
  <h1>
    Update Spell
  </h1>
  <Connect(SpellForm)
    isUpdate={true}
  />
</Page>
`;
